# rqt_zone_annotator

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
resource/: zone_widget.ui
scripts/: rqt_zone_annotator
src/rqt_zone_annotator/: annotator.py  main_widget.py
